# workflow-lineage-guard

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVPOST_SUBMISSION.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  agent.py  main.py  pyproject.toml  render.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
data/: demo_request.json
docs/: BUILD_DISCLOSURE.md  DEMO_VIDEO_SCRIPT.md  prompt.md
examples/: before_workflow.json  demo_report.json  fixed_workflow.json
lineage_guard/: __init__.py  engine.py  live_evidence.py  models.py
outputs/: .gitkeep
scripts/: datahub_preflight.py  generate_artifacts.py
static/: app.js  index.html  styles.css
tests/: test_agent_fallback.py  test_engine.py  test_live_evidence.py
