[project]
name = "workflow-lineage-guard"
version = "0.1.0"
description = "A DataHub-powered agent that predicts and repairs schema-change breakage in automation workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Asad Abbas Sheikh" }]
dependencies = [
  "fastapi>=0.115.0",
  "mcp>=1.28.1",
  "openai-agents>=0.7.0",
  "python-dotenv>=1.0.1",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pillow>=11.0.0",
  "pytest>=8.3.0",
  "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
